--- a/frontend/src/components/Chat/chat.ejs
+++ b/frontend/src/components/Chat/chat.ejs
@@ -1,6 +1,5 @@
 
 
-
 <html>
     <body>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -37,12 +36,12 @@
                     } else {
                         message_temp.setAttribute("class", "other");
                     }
-                    message_temp.appendChild(document.createTextNode(msg.text))
+                    message_temp.appendChild(document.createTextNode(msg.text));
                     $('#messages').append(message_temp);
                     $('#messages').animate({
                         scrollTop: $('#messages').get(0).scrollHeight
                     }, 0);
-                })
+                });
             });
             
             // handling chat button
@@ -73,7 +72,7 @@
                             s(".chat").hide();
                             s("#roomBtn").html("Enter chat room");
                         }
-                    })
+                    });
                 }
             });
 
