added server config to frontend, did other frontend stuff

--- a/frontend/src/components/Chat/chat.css
+++ b/frontend/src/components/Chat/chat.css
@@ -62,3 +62,12 @@
     padding: 10px;
     height: 100%;
 }
+
+.noCurrentConvoText {
+    position: absolute;
+    top: 20%;
+    font-size: 40px;
+    color: darkgray;
+    text-align: center;
+    cursor: default;
+}
