--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.post {
+  border: 1px solid #ccc;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.comment {
+  margin-left: 20px;
+  border: 1px solid #eee;
+  padding: 5px;
+}
+
+.comment-thread {
+  margin-left: 30px;
+  margin-top: 5px;
+  border: 1px solid #eee;
+  padding: 5px;
+}
