--- a/frontend/src/components/Chat/Message/Message.css
+++ b/frontend/src/components/Chat/Message/Message.css
@@ -7,6 +7,7 @@
 
 .messageTop {
     display:flex;
+    margin-bottom: 0px;
 }
 
 .messageImg{
@@ -14,6 +15,7 @@
     height: 32px;
     border-radius: 50%;
     object-fit: cover;
+    margin-top: 5px;
     margin-right: 10px;
 }
 
@@ -27,7 +29,8 @@
 
 .messageBottom {
     font-size: 12px;
-    margin-top: 10px;
+    margin-top: 0;
+    margin-bottom: 8px;
 }
 
 .message.own{
