--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -1,11 +1,16 @@
 .login {
-    max-width: 500px;
-    margin: 30px auto 30px auto;
+    width: 380px; 
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    position: absolute; 
+    right: 10%; 
+    top: 40%; 
+    transform: translateY(-40%);
+    background: rgba(255, 255, 255, 0.9); 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
 }
-  
+
 .loginform {
     display: flex;
     flex-direction: column;
@@ -13,38 +18,39 @@
 
 .formgroup {
     margin-bottom: 10px;
-    margin-right: 20px;
 }
-  
+
 label {
     font-weight: bold;
-    padding-bottom: 5px;
+    margin-bottom: 5px; 
 }
-  
+
 input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="date"] {
-    width: 100%;
-    padding: 8px;
+input[type="password"] {
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
 }
-  
+
 .loginbtn {
-    width: 100%;
     padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
     cursor: pointer;
 }
-  
+
 .error {
     color: red;
-    margin-top: 10px;
+    margin-bottom: 10px;  /* Provides spacing from the error message to the form */
 }
-  
+
+.body {
+    width: 100%;
+    height: 120vh;
+    background: url('https://moggers-image-uploads.s3.amazonaws.com/penn4.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
