--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -1,25 +1,85 @@
-/* Profile.module.css */
-
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
+  margin: 20px auto;
+  max-width: 800px;
 }
-  
-.profile-info {
-    margin-bottom: 20px;
+
+h1 {
+  margin-bottom: 20px;
+  margin-top: 5%;
 }
-  
-.posts-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
+
+.profileInfo {
+  margin-bottom: 20px;
+  width: 100%;
 }
-  
+
+.profileHeader {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.profileRightTop {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-right: 20px;
+  margin-top: 5%;
+}
+
+.profileRightBottom {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 5px;
+  margin-right: 10px;
+}
+
+.profileLeft {
+  display: flex;
+  align-items: center;
+}
+
+.profileRight {
+  margin-left: 10%;
+  margin-right: 5%;
+}
+
+.profilePic {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.stats p,
+.details p {
+  margin: 5px 0;
+}
+
+.link {
+  color: black;
+  transition: color 0.3s;
+}
+
+.link:hover {
+  color: gray;
+}
+
+.postsHeader {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.postsGrid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 20px;
+}
+
 .post {
-    border: 1px solid #ccc;
-    padding: 10px;
-    background-color: #f9f9f9;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
-  
