--- a/frontend/src/components/Chat/chat.css
+++ b/frontend/src/components/Chat/chat.css
@@ -82,6 +82,7 @@
 .noCurrentConvoText {
     position: absolute;
     top: 20%;
+    left: 5%;
     font-size: 40px;
     color: darkgray;
     text-align: center;
