--- a/frontend/src/components/Home/Home.module.css
+++ b/frontend/src/components/Home/Home.module.css
@@ -6,7 +6,7 @@
 }
 
 .feed {
-  width: 60%;
+  width: 50%;
   margin-top: 30px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -42,4 +42,18 @@ img {
   height: auto;
   display: block;
   margin-top: 10px;
+}
+
+.postHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.heart, .likedHeart {
+  border: none; 
+  background: none; 
+  cursor: pointer; 
+  font-size: 24px; 
+  color: #ff0000; 
 }
