--- a/frontend/src/components/Post/PostDetails.module.css
+++ b/frontend/src/components/Post/PostDetails.module.css
@@ -64,6 +64,14 @@
     border-radius: 50%; 
     margin-right: 10px; 
   }
+
+  .commentProfilePic {
+    width: 40px; 
+    height: 40px;
+    border-radius: 50%; 
+    margin-right: 3px; 
+    object-fit: cover;
+}
   
   .fullName {
     font-size: 14px;
@@ -98,6 +106,9 @@
     font-size: 20px; 
     align-items: center;
     justify-content: center;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-bottom: 0;
   }
 
   .overlay {
@@ -121,6 +132,8 @@
     width: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     overflow-y: auto;
+    max-height: 100%;
+    padding-bottom: 50px;
   }
 
   .postdetails {
