--- a/frontend/src/components/Friends/Friends.css
+++ b/frontend/src/components/Friends/Friends.css
@@ -9,16 +9,18 @@
     margin: 0 20px;
     margin-top: 20px;
     padding: 20px;
-    border-right: 2px solid #ccc;
     box-sizing: border-box; 
 }
 
 .column:last-child {
-    border-right: none;
+    border-left: 2px solid #ccc;
+}
+.column:first-child {
+    border-right: 2px solid #ccc;
 }
 
 .section {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 
 .section:last-child {
