--- a/frontend/src/components/ChangeProfile/ChangeProfile.css
+++ b/frontend/src/components/ChangeProfile/ChangeProfile.css
@@ -1,6 +1,7 @@
 .profile-container {
     max-width: 400px;
     margin: 0 auto;
+    margin-top: 20px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
